sumo/tests/duarouter/alternatives/style1_input/errors/xml/missing_element_begin/errors.duarouter
Error: Attribute 'id' is missing in definition of a route.
Quitting (on error).
